<resources>
    <string name="Cancelled">Cancelled</string>
    <string name="_1pos_machine">1 POS machine</string>
    <string name="_1st_dependant_details">1st Dependant details</string>
    <string name="_2fa_setup">2FA setup</string>
    <string name="a_smile_is_a_good_sign_that_you_are_our_partner_and_friend">a smile is a good sign that you are our partner and friend.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_kyc">About Kyc</string>
    <string name="about_kyc_header">In compliance with regulatory requirements and to ensure the safety of your personal and business details, please update your KYC. An updated KYC helps Nomba protect you against fraud.</string>
    <string name="accept_location_permission_to_continue">Please accept location permission to continue</string>
    <string name="accept_request">Accept Request</string>
    <string name="accept_terms">By clicking the box I accept Nomba\'s Term\'s Of Use / Privacy Policy</string>
    <string name="access_business_tools_merchant">You have access to business tools that can help your business</string>
    <string name="access_to_loans">You have access to daily loans, savings and cash insurance</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="account_and_settings">Account and Settings</string>
    <string name="account_blacklisted_status_description">We have temporarily locked your account because we suspect a strange activity on your account.</string>
    <string name="account_blacklisted_status_title">Account Blacklisted</string>
    <string name="account_blocked_status_description">We have temporarily locked your account because we suspect a security breach on your account.</string>
    <string name="account_blocked_status_tip">To reactivate your account, please contact our customer support to verify your identity and we’ll let you log back in.</string>
    <string name="account_blocked_status_title">Your account has been locked!</string>
    <string name="account_information">Account Information</string>
    <string name="account_name">Account Name</string>
    <string name="account_name_value">Cosmic Intelligent Labs (Agent Funding Account)</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_already_added_message">Account number already added to recipients.</string>
    <string name="account_number_error">Enter valid account number</string>
    <string name="account_number_hint">87837884</string>
    <string name="account_numbers">Account Numbers</string>
    <string name="account_suspended">For security reasons your account has been temporarily suspended. It appears that the details you’ve provided does not match your account information.\n\nPlease contact our customer support to re-activate your account</string>
    <string name="account_suspended_status_description">It appears your manager has suspended your account. Please reach out to your manager to rectify this.</string>
    <string name="account_suspended_status_tip">If you have no idea why you are getting this, please contact our customer support to verify your identity and we’ll let you log back in.</string>
    <string name="account_suspended_status_title">Account Suspended</string>
    <string name="account_suspended_title">Account Suspended</string>
    <string name="account_type">Account type</string>
    <string name="account_type_fragment_title">Select Account Type</string>
    <string name="account_type_page_subtitle">Which account would you prefer?</string>
    <string name="account_upgrade">Account Upgrade</string>
    <string name="account_upgraded">Account Upgraded</string>
    <string name="account_verification">Account Verification</string>
    <string name="accrued_daily_charge">Accrued Daily Charge</string>
    <string name="action_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="activate_pos_terminal">Activate POS Terminal</string>
    <string name="active">Active</string>
    <string name="activities">Today</string>
    <string name="add_images_screenshots">Add Images/Screenshots (optional)</string>
    <string name="add_money_to_wallet">Add Money to Wallet</string>
    <string name="add_multiple">Add Multiple</string>
    <string name="add_service_fee_to_amount">Add Service Fee to Amount</string>
    <string name="add_to_profile">Add to Profile</string>
    <string name="add_to_verification">Add to Verification</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="address">Address</string>
    <string name="advert_item_icon">advert item icon</string>
    <string name="agency_baking_radio_text">I provide agent banking services</string>
    <string name="agency_banking">Agency Banking</string>
    <string name="agent">Agent</string>
    <string name="agent_account">Agent Account</string>
    <string name="agent_can_do_widthrawals_text">You can do withdrawals, transfers and bills for people</string>
    <string name="agent_commission">Commission</string>
    <string name="agent_commission_2">Commission: %s</string>
    <string name="agent_referral_info">You can now earn on any business you refer on Nomba!\n\nTo get started, simply input their name and phone number. Let\'s go!</string>
    <string name="agent_referral_title">Refer Business</string>
    <string name="agent_referred_title">Referred Businesses</string>
    <string name="agent_type_bottom_text">If you don’t want to be an agent, go back and select another option.</string>
    <string name="agent_type_description_text">You can provide financial services to those in your neighbourhood</string>
    <string name="airtime">Airtime</string>
    <string name="airtime_purchase_type_voucher">Voucher</string>
    <string name="airtime_purchase_type_vtu">VTU</string>
    <string name="airtime_slash_data">Airtime/Data</string>
    <string name="airtime_top_up">Airtime Top-up</string>
    <string name="all_agents">All Businesses</string>
    <string name="all_categories">All Categories</string>
    <string name="all_commissions_key">All Commissions</string>
    <string name="all_customers">All Customers</string>
    <string name="all_good">All Good…</string>
    <string name="all_loans">All Loans</string>
    <string name="all_pos_label">All requests</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="all_transactions_key">All Transactions</string>
    <string name="allow_kudi_to_access">Allow Nomba To Access</string>
    <string name="amount">Amount</string>
    <string name="amount_blank_error">please enter transaction amount</string>
    <string name="amount_disbursed">Amount Disbursed</string>
    <string name="amount_error">Amount field cannot be empty</string>
    <string name="amount_hint">0.00</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="amount_pending">Amount Pending</string>
    <string name="beta">Beta</string>
    <string name="call_support">Call Support</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="continue_text">Continue</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="description_cellular_device">cellular device</string>
    <string name="enter_loan_amount">Enter Loan Amount</string>
    <string name="how_much_will_you_like_to_access_at_this_time">How much will you like to access at this time?</string>
    <string name="id_card_number">ID Card Number</string>
    <string name="k_shock_not_available_text">We are still at testing phase, so Loans is not YET available in your region but we are working on it.</string>
    <string name="kshock_icon">KShock Icon</string>
    <string name="maximum_loan_amount">Maximum Loan Amount</string>
    <string name="sample_prompt">Kindly inform your customer to dial the code below to complete this transaction from the phone number registered to their bank</string>
    <string name="select_id_card">Select ID Card</string>
    <string name="text_add_outlet">Add Outlet</string>
    <string name="text_check_status">Check Status</string>
    <string name="text_click_to_copy">Click to Copy</string>
    <string name="text_close">Close</string>
    <string name="text_content_desc_form_header_icon">form_header_icon</string>
    <string name="text_continue">Continue</string>
    <string name="text_customer_name">Customer\'s Name</string>
    <string name="text_customer_phone_num">Customer\'s Phone Number</string>
    <string name="text_default_ussd_prompt">Dial *xyz# and follow the command prompt</string>
    <string name="text_desc">Kindly confirm that you have imputed to correct wallet number as this action cannot be undone once initiated.</string>
    <string name="text_icon_link">icon_link</string>
    <string name="text_kudi_fee_x">Nomba Fee: %s</string>
    <string name="text_outlet_phone_num">Outlet Phone Number</string>
    <string name="text_outlet_pin">Outlet PIN</string>
    <string name="text_pending_fraud_check_desc_body">To protect you from fraud and other issues that may arise in the future, it is important that you collect your customer’s details before we credit your wallet.</string>
    <string name="text_phone_number_notif">Please note that this should be the phone number registered with the customer’s selected bank.</string>
    <string name="text_retry">Retry</string>
    <string name="text_select_provider">Select Provider</string>
    <string name="text_this_action_cannot_be_reversed">This action cannot be reversed!</string>
    <string name="text_ussd_provider_fetch_error_msg">Unable to fetch providers at the moment.</string>
    <string name="text_ussd_withdrawal_select_bank_propmt">Select your customer’s bank and follow the command prompt. Proceed to enter required fields</string>
    <string name="text_we_need_to_verify_your_customer">We need to verify your customer</string>
    <string name="two_hundred_k">₦200,000</string>
</resources>