<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dimen_20dp" android:layout_marginEnd="20dp">
        <ImageView android:id="@+id/iv_header_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:contentDescription="@string/text_content_desc_form_header_icon" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_form_checker"/>
        <TextView android:textSize="18sp" android:textColor="@color/blackDatePickerTextColor" android:id="@+id/tv_desc_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:text="@string/text_we_need_to_verify_your_customer" android:lineSpacingExtra="@dimen/text_6sp" android:textAlignment="center" android:paddingStart="8dp" android:paddingEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_header_icon" style="@style/TextViewFont.Bold"/>
        <TextView android:textSize="14sp" android:textColor="@color/kudiGray" android:id="@+id/tv_desc_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/text_pending_fraud_check_desc_body" android:lineSpacingExtra="@dimen/text_6sp" android:textAlignment="center" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_desc_title"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/et_customer_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_30dp" app:KIF_hintText="@string/text_customer_name" app:KIF_inputType="7" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_desc_body"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/et_customer_phone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" app:KIF_hintText="@string/text_customer_phone_num" app:KIF_inputType="1" app:KIF_maxLength="11" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/et_customer_name"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/customers_occupation" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" app:KIF_hintText="Customers&apos; Occupation" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/et_customer_phone"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/reason_for_widthrawal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" app:KIF_hintText="Reason for withdrawal" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/customers_occupation"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/pending_kyc_id_type" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" app:KIF_hintText="@string/select_id_card" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/reason_for_widthrawal"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/pending_kyc_id_number" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" app:KIF_hintText="@string/id_card_number" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/pending_kyc_id_type"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/pending_kyc_date_of_birth" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" app:KIF_hintText="@string/date_of_birth" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/pending_kyc_id_number"/>
        <ai.kudi.dip.library.button.KudiButton android:id="@+id/btn_continue" android:layout_width="match_parent" android:layout_marginTop="20dp" app:buttonText="@string/text_continue" app:layout_constraintHorizontal_chainStyle="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/pending_kyc_date_of_birth" style="@style/KudiPrimaryButtonEnabled"/>
        <TextView android:gravity="center_vertical" android:id="@+id/btn_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/text_close" android:drawablePadding="8dp" app:drawableStartCompat="@drawable/ic_close_kudi_red" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/btn_continue" style="@style/KudiTextView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
