<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/page_background" android:padding="@dimen/dimen_30dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/description_cellular_device" app:srcCompat="@drawable/ic_cellular"/>
        <TextView android:textSize="@dimen/text_14sp" android:textColor="@color/colorPrimary" android:gravity="center_horizontal" android:id="@+id/tv_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_30dp" android:text="@string/sample_prompt" android:lineSpacingExtra="@dimen/text_6sp"/>
        <TextView android:textSize="@dimen/text_24sp" android:textColor="@color/colorPrimary" android:layout_gravity="center_horizontal" android:id="@+id/tv_ussd_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_30dp" style="@style/TextViewFont.Bold"/>
        <TextView android:layout_gravity="center_horizontal" android:id="@+id/btn_copy_ussd_code" android:padding="@dimen/dimen_10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/text_click_to_copy" android:drawablePadding="@dimen/dimen_10dp" app:drawableStartCompat="@drawable/ic_copy_gray" style="@style/kudiTextViewPrimary"/>
        <TextView android:textSize="@dimen/text_14sp" android:textColor="@color/darkBrownYellow" android:layout_gravity="center_horizontal" android:id="@+id/tv_service_charge" android:background="@color/lightYellow" android:padding="@dimen/dimen_10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:text="@string/text_kudi_fee_x"/>
        <ai.kudi.dip.library.button.KudiButton android:id="@+id/btn_check_status" android:layout_width="match_parent" android:layout_marginTop="@dimen/dimen_50dp" android:layout_marginBottom="@dimen/dimen_50dp" app:buttonText="@string/text_check_status" style="@style/KudiPrimaryButtonEnabled"/>
    </LinearLayout>
</ScrollView>
