<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/ic_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:contentDescription="@string/text_icon_link" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_link_blue"/>
        <ai.kudi.dip.library.button.KudiTextView android:textSize="18sp" android:textColor="@color/black" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/text_this_action_cannot_be_reversed" android:textAlignment="center" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/ic_link" style="@style/TextViewFont.Medium"/>
        <ai.kudi.dip.library.button.KudiTextView android:textSize="12sp" android:id="@+id/tv_desc" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/text_desc" android:lineSpacingExtra="6sp" android:textAlignment="center" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_title" style="@style/textViewStyle"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/et_outlet_phone_num" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:KIF_hintText="@string/text_outlet_phone_num" app:KIF_inputType="1" app:KIF_maxLength="11" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_desc" style="@style/kudiInputFieldStyle"/>
        <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/et_outlet_pin" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:KIF_hintText="@string/text_outlet_pin" app:KIF_inputType="4" app:KIF_maxLength="4" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/et_outlet_phone_num" style="@style/kudiInputFieldStyle"/>
        <ai.kudi.dip.library.button.KudiButton android:id="@+id/btn_add_outlet" android:layout_width="match_parent" android:layout_height="58dp" android:layout_marginTop="30dp" android:layout_marginBottom="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:buttonText="@string/text_add_outlet" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/et_outlet_pin" app:layout_constraintVertical_bias="0" style="@style/KudiPrimaryButtonEnabled"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
