<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/page_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@+id/filledState" android:layout_width="0dp" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
            <ai.kudi.dip.library.button.KudiTextView android:gravity="center" android:background="@color/white" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_16dp" android:text="@string/text_ussd_withdrawal_select_bank_propmt" android:lineSpacingExtra="6sp" app:layout_constraintBottom_toTopOf="@+id/rv_options" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/textViewStyle"/>
            <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/et_provider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:KIF_hintText="@string/text_select_provider"/>
            <TextView android:textColor="@color/primaryTextColor" android:gravity="center_vertical" android:id="@+id/tv_desc" android:paddingTop="5dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/text_default_ussd_prompt" android:lineSpacingExtra="6sp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" style="@style/TextViewFont.Medium"/>
            <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/et_voucher" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:KIF_hintText="Enter Withdrawal Code" app:KIF_inputType="0"/>
            <ai.kudi.dip.library.edittext.KudiInputField android:id="@+id/et_phone_num" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:KIF_hintText="@string/text_customer_phone_num" app:KIF_inputType="1" app:KIF_maxLength="11"/>
            <TextView android:textColor="@color/KudiRed" android:id="@+id/tv_phone_num_notif" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/text_phone_number_notif" android:lineSpacingExtra="@dimen/text_6sp" android:layout_marginStart="@dimen/dimen_20dp" android:layout_marginEnd="@dimen/dimen_20dp"/>
            <ai.kudi.dip.library.button.KudiButton android:gravity="center_vertical" android:id="@+id/btn_continue" android:visibility="gone" android:layout_width="match_parent" android:layout_marginLeft="20dp" android:layout_marginTop="30dp" android:layout_marginRight="20dp" android:layout_marginBottom="30dp" android:paddingStart="16dp" app:buttonText="@string/text_continue" style="@style/KudiPrimaryButtonEnabled"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/retryState" android:background="@color/transparent" android:padding="@dimen/dimen_20dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0">
            <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:text="@string/text_ussd_provider_fetch_error_msg"/>
            <ai.kudi.dip.library.button.KudiButton android:layout_gravity="center" android:id="@+id/btn_retry" android:layout_width="match_parent" android:layout_height="@dimen/dimen_50dp" android:layout_marginLeft="20dp" android:layout_marginTop="@dimen/dimen_30dp" android:layout_marginRight="20dp" android:layout_marginBottom="@dimen/dimen_10dp" app:buttonText="@string/text_retry" style="@style/KudiPrimaryButtonEnabled"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
