<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/kshock_tool_bar" layout="@layout/kshock_tool_bar"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/page_background" android:padding="@dimen/dimen_20dp" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <TextView android:textColor="@color/primaryTextColor" android:id="@+id/how_much_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/how_much_will_you_like_to_access_at_this_time" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ai.kudi.dip.library.edittext.KudiNairaInputField android:id="@+id/amount_field" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginTop="@dimen/dimen_20dp" app:KIF_hintText="@string/enter_loan_amount" app:KIF_inputType="1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/how_much_label"/>
        <TextView android:textSize="13sp" android:textColor="@color/KudiRed" android:id="@+id/maximum_amount_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/maximum_loan_amount" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/amount_field"/>
        <TextView android:textSize="13sp" android:textColor="@color/KudiRed" android:id="@+id/maximum_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/two_hundred_k" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/maximum_amount_label"/>
        <ai.kudi.dip.library.button.KudiButton android:id="@+id/submit_button" android:layout_width="0dp" android:layout_marginTop="@dimen/dimen_30dp" app:buttonText="@string/continue_text" app:layout_constraintEnd_toEndOf="@+id/maximum_amount" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/maximum_amount_label" style="@style/KudiPrimaryButtonEnabled"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
