<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/page_background" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/k_shock_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:contentDescription="@string/kshock_icon" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_kshock"/>
        <TextView android:textColor="@color/white" android:background="@drawable/curve_rect_orange_fill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/beta" android:textAllCaps="true" android:paddingStart="16dp" android:paddingEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/k_shock_icon" app:layout_constraintEnd_toEndOf="@+id/k_shock_icon" app:layout_constraintStart_toStartOf="@+id/k_shock_icon"/>
        <TextView android:textSize="30sp" android:gravity="center" android:id="@+id/title_text_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:text="@string/coming_soon" app:layout_constraintTop_toBottomOf="@+id/k_shock_icon" style="@style/blackBoldTextStyle"/>
        <TextView android:textColor="@color/colorPrimary" android:gravity="center" android:id="@+id/loan_not_available_description_text" android:layout_width="248dp" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/k_shock_not_available_text" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title_text_view"/>
        <TextView android:textColor="@color/colorPrimary" android:gravity="center" android:id="@+id/description_text" android:layout_width="247dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/loan_not_available_description_text"/>
        <ai.kudi.dip.library.button.KudiButton android:id="@+id/close_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="30dp" app:buttonDrawable="@drawable/ic_cancel" app:buttonText="@string/text_close" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/description_text" style="@style/KudiSecondaryButtonEnabledBlue"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
