<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/textView38" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/account_suspended_title" android:layout_marginStart="20dp" android:layout_marginEnd="@dimen/dimen_20dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/onBoardingBoldTextStyle"/>
    <TextView android:id="@+id/textView37" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/account_suspended" android:lineSpacingExtra="3dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView38" style="@style/onBoardingThinTextStyle"/>
    <ai.kudi.dip.library.button.KudiButton android:id="@+id/loginSuspendedCallSupportButton" android:layout_width="match_parent" android:layout_marginTop="40dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:buttonDrawable="@drawable/ic_support" app:buttonText="@string/call_support" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView37" style="@style/KudiPrimaryButtonEnabled"/>
</androidx.constraintlayout.widget.ConstraintLayout>
